Rewrite README for THPTQG exam features

--- a/templates/contest/contest.html
+++ b/templates/contest/contest.html
@@ -77,7 +77,13 @@
             <input type="submit" class="btn-midnightblue" value="{{ _('Login to participate') }}">
         </form>
     {% endif %}
-    
+
+    {% if contest.format_name == 'thptqg' and contest.exam_papers.exists() and contest.is_in_contest(request.user) %}
+        <a class="contest-join-pseudotab btn-midnightblue" href="{{ url('contest_exam', contest.key) }}">
+            {{ _('Go to exam interface') }}
+        </a>
+    {% endif %}
+
     <div class="content-description">
         {% cache 3600 'contest_html' contest.id MATH_ENGINE %}
             {{ contest.description|markdown|reference|str|safe }}
